--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,12 +8,14 @@
       <div class="mt-2 text-xl font-semibold">{{ task.title }}</div>
       <div class="text-sm text-gray-500 ">{{ task.description }}</div>
       <div class="relative pt-1 mt-2">
-        <div class="overflow-hidden h-2 mb-4 text-xs flex rounded" [ngClass]="task.backgroundColor+'-200'">
+
+        <div class="overflow-hidden h-2 mb-4 text-xs flex rounded bg-white" >
           <div class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center "
                 [ngStyle]="{ 'width': task.progress + '%'  }"
                 [ngClass]="task.backgroundColor + '-500'"
           ></div>
         </div>
+        <p>{{ task.progress }}%</p>
       </div>
       <div class="flex space-x-2">
           <img class="w-6 h-6 rounded-full" [src]="'https://via.placeholder.com/150'" alt="User">
