--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
         </div>
         </a>
     </div>
-    <img src="https://avatars.githubusercontent.com/u/70586674?s=96&v=4" alt="user" class="w-10 h-10 rounded-full ml-4" />
+    <img  *ngIf="user" src="user.profileImage" alt="user" class="w-10 h-10 rounded-full ml-4" />
     <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 ml-4" viewBox="0 0 20 20" fill="currentColor">
         <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
     </svg>
