--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,21 +1,31 @@
 <div class="p-6 bg-gray-800 text-white rounded-lg shadow-md">
-    <h2 class="text-2xl font-semibold mb-4">Crear/Editar Usuario</h2>
-    <form (ngSubmit)="onSubmit()">
-      <div class="mb-4">
-        <label class="block text-sm font-medium mb-1" for="username">Nombre de Usuario</label>
-        <input type="text" id="username" [(ngModel)]="user.username" name="username" class="w-full p-2 bg-gray-700 rounded">
-      </div>
-      <div class="mb-4">
-        <label class="block text-sm font-medium mb-1" for="email">Correo Electrónico</label>
-        <input type="email" id="email" [(ngModel)]="user.email" name="email" class="w-full p-2 bg-gray-700 rounded">
-      </div>
-      <div class="mb-4">
-        <label class="block text-sm font-medium mb-1" for="role">Rol</label>
-        <select id="role" [(ngModel)]="user.role" name="role" class="w-full p-2 bg-gray-700 rounded">
-          <option *ngFor="let role of roles" [value]="role">{{ role }}</option>
-        </select>
-      </div>
-      <button type="submit" class="w-full bg-blue-600 p-2 rounded">Guardar</button>
-    </form>
+  <h2 class="text-2xl font-semibold mb-4">Crear Usuario</h2>
+  <div class="mb-4">
+    <label class="block text-sm font-medium mb-1" for="name">Nombre Completo</label>
+    <input type="text" id="name" [(ngModel)]="user.name" name="name" class="w-full p-2 bg-gray-700 rounded">
   </div>
-  
+
+  <div class="mb-4">
+    <label class="block text-sm font-medium mb-1" for="username">Nombre de Usuario</label>
+    <input type="text" id="username" [(ngModel)]="user.username" name="username" class="w-full p-2 bg-gray-700 rounded">
+  </div>
+
+  <div class="mb-4">
+    <label class="block text-sm font-medium mb-1" for="email">Correo Electrónico</label>
+    <input type="email" id="email" [(ngModel)]="user.email" name="email" class="w-full p-2 bg-gray-700 rounded">
+  </div>
+
+  <div class="mb-4">
+    <label class="block text-sm font-medium mb-1" for="password">Contraseña</label>
+    <input type="password" id="password" [(ngModel)]="user.password" name="password" class="w-full p-2 bg-gray-700 rounded">
+  </div>
+
+  <div class="mb-4">
+    <label class="block text-sm font-medium mb-1" for="role">Rol</label>
+    <select id="role" [(ngModel)]="user.role" name="role" class="w-full p-2 bg-gray-700 rounded">
+      <option *ngFor="let role of roles" [value]="role">{{ role }}</option>
+    </select>
+  </div>
+
+  <button (click)="onSubmit()" class="w-full bg-blue-600 p-2 rounded">Guardar</button>
+</div>
