--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,8 +1,8 @@
 <div class="container mx-auto p-4">
-    <h1 class="text-2xl font-bold mb-4">Notificaciones</h1>
+    <h1 class="text-2xl font-bold mb-4">Notifications</h1>
     
     <div>
-      <h2 class="text-xl font-semibold mb-2">No Vistas</h2>
+      <h2 class="text-xl font-semibold mb-2">Not seen</h2>
       <div *ngFor="let notification of unseenNotifications" class="p-4 border rounded shadow mb-2 bg-white">
         <p>{{ notification.message }}</p>
         <small class="text-gray-500">{{ notification.timestamp | date:'short' }}</small>
@@ -15,7 +15,7 @@
     </div>
   
     <div class="mt-4">
-      <h2 class="text-xl font-semibold mb-2">Vistas Recientes</h2>
+      <h2 class="text-xl font-semibold mb-2">Recent seen</h2>
       <div *ngFor="let notification of recentSeenNotifications" class="p-4 border rounded shadow mb-2 bg-gray-100">
         <p>{{ notification.message }}</p>
         <small class="text-gray-500">{{ notification.timestamp | date:'short' }}</small>
@@ -24,13 +24,13 @@
         <button 
           (click)="toggleShowAllSeen()" 
           class="mt-2 text-blue-500 hover:underline">
-          Ver Todas las Notificaciones
+            view all notifications
         </button>
       </div>
     </div>
   
     <div *ngIf="showAllSeen" class="mt-4">
-      <h2 class="text-xl font-semibold mb-2">Todas las Vistas</h2>
+      <h2 class="text-xl font-semibold mb-2">All viewed</h2>
       <div *ngFor="let notification of allSeenNotifications" class="p-4 border rounded shadow mb-2 bg-gray-100">
         <p>{{ notification.message }}</p>
         <small class="text-gray-500">{{ notification.timestamp | date:'short' }}</small>
@@ -39,7 +39,7 @@
         <button 
           (click)="toggleShowAllSeen()" 
           class="mt-2 text-blue-500 hover:underline">
-          Ver Menos
+          Show Less
         </button>
       </div>
     </div>
