"Updated token in GithubIntegrationComponent, changed image path in HeaderComponent, added github icon in IconsComponent, and updated sidebar menu items in SidebarComponent."

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="flex items-center grow md:grow-0 w-fit md:w-48">
     <!-- <div class="w-10 h-10 bg-gradient-to-tr from-fuchsia-600 to-violet-600 grid place-items-center rounded-full font-bold text-white text-md">DO</div>
      -->
-    <img src="../../assets/DevOra.png" alt="user" class="w-10 h-10 rounded-full ml-4" />
+    <img src="assets/DevOra.png" alt="user" class="w-10 h-10 rounded-full ml-4" />
     <div class="ml-2 font-bold text-xl text-white">DevORA</div>
   
     </div>
